# tarsy

./: .gitignore  .golangci.yml  CLAUDE.md  README.md  go.mod  go.sum
.github/workflows/: ci.yml
cmd/tarsy/: main.go
deploy/: README.md  podman-compose.yml
deploy/config/: README.md  llm-providers.yaml.quickstart  tarsy.yaml.example  tarsy.yaml.quickstart
docs/: architecture-overview.md  functional-areas-design.md
docs/adr/: 0004-stage-types.md  0005-referenced-stage-id.md  0006-search-text.md  0007-automated-actions.md  0008-session-scoring.md  0009-session-workflow.md  0010-prometheus-metrics.md  0011-scoring-framework-redesign.md  0012-agent-skills.md  0013-review-feedback-redesign.md  0014-investigation-memory.md
docs/proposals/: agent-skills-design.md  implicit-orchestrator-design.md  investigation-memory-design-questions.md  investigation-memory-design.md  llm-provider-fallback-design.md  (+4 more)
ent/: alertsession.go  alertsession_create.go  alertsession_query.go  alertsession_update.go  client.go  ent.go  investigationmemory.go  investigationmemory_create.go  investigationmemory_delete.go  investigationmemory_query.go  investigationmemory_update.go  mutation.go  runtime.go  sessionreviewactivity.go  sessionreviewactivity_create.go  sessionreviewactivity_delete.go  sessionreviewactivity_query.go  sessionreviewactivity_update.go  sessionscore.go  sessionscore_create.go  sessionscore_update.go  stage.go  stage_create.go  stage_update.go  tx.go
ent/hook/: hook.go
llm-service/: pyproject.toml
llm-service/llm/providers/: google_native.py
llm-service/tests/: test_google_native.py  test_langchain_provider.py
make/: db.mk  dev.mk  openshift.mk
scripts/: upgrade-dev-postgres-pgvector.sh
(+391 files in other folders)
