[project]
name = "tarsy-llm"
version = "0.1.0"
description = "TARSy LLM Service - gRPC wrapper for Gemini client"
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "grpcio-health-checking>=1.76.0",
    "google-genai>=1.64.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    # LangChain multi-provider support
    "langchain-core>=1.2.13",
    "langchain-openai>=1.1.9",
    "langchain-anthropic>=1.3.3",
    "langchain-xai>=1.2.2",
    "langchain-google-genai>=4.2.1",
    "langchain-google-vertexai>=3.2.2",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
]

[tool.coverage.run]
source = ["llm"]
omit = ["*/tests/*", "*/llm_proto/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.wheel]
packages = ["llm"]

[tool.uv]
# langchain-google-vertexai pulls in langchain-tests as a runtime dep,
# which caps pytest<9. Override to allow our pytest>=9 requirement.
override-dependencies = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
